End of secion 17

--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,10 +1,10 @@
 <div class="card">
   <div class="card-boy">
-    @if(messages().length === 0){
+    @if(messsageService.messageThread().length === 0){
     <p>No messages yet</p>
     }@else {
     <ul class="chat">
-      @for(message of messages(); track message.id){
+      @for(message of messsageService.messageThread(); track message.id){
       <li>
         <div>
           <span class="chat-img float-end">
