--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -3,7 +3,11 @@
     @if(messsageService.messageThread().length === 0){
     <p>No messages yet</p>
     }@else {
-    <ul class="chat">
+    <ul
+      class="chat"
+      #scrollMe
+      style="overflow: scroll; max-height: 500px; scroll-behavior: smotth"
+    >
       @for(message of messsageService.messageThread(); track message.id){
       <li>
         <div>
